--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -9,6 +9,8 @@
     <div style="text-align: center; margin-top: 40px">
       <h2 class="texto">¡Oops!</h2>
       <p class="texto">Página no encontrada.</p>
+
+      <!-- Botón para ir a inicio -->
       <ion-button
         expand="block"
         (click)="goHome()"
@@ -16,6 +18,8 @@
         fill="clear"
         >Ir a inicio</ion-button
       >
+
+      <!-- Botón para cerrar sesión -->
       <ion-button
         expand="block"
         class="input-button-2"
