--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,3 +1,4 @@
+<!-- Página para restablecer la contraseña -->
 <ion-content>
   <ion-header>
     <ion-toolbar class="ion-header">
@@ -5,10 +6,12 @@
     </ion-toolbar>
   </ion-header>
 
+  <!-- Banner superior -->
   <div class="foto-banner">
     <img src="assets/perrio.jpg" alt="Restablecer Contraseña Banner" />
   </div>
 
+  <!-- Formulario para nueva contraseña -->
   <ion-content class="ion-padding">
     <form (ngSubmit)="onResetPassword()">
       <ion-item class="input-item">
