--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,13 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+// Paleta de colores personalizada para Patita Sana
+:root {
+  --green-matcha: #a4c084;
+  --green-matcha-dark: #7a9c5c;
+  --green-matcha-light: #b0cca5;
+  --white: #fff;
+  --gray-bg: #f8f8f0;
+  --text-dark: #333;
+  --text-light: #666;
+}
