feat: Enhance styling and layout for home, not-found, and reset-password pages; improve user interface elements

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,11 +15,7 @@
 
     <ion-content class="header">
       <ion-list class="logout">
-        <ion-item lines="none" class="logout">
-          <!--
-          <ion-avatar slot="start">
-            
-          </ion-avatar>-->
+        <ion-item lines="none" class="logout user">
           <ion-label fill="clear" class="ion-card">
             <h2>{{ userName }}</h2>
           </ion-label>
