--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -2,7 +2,9 @@
 <ion-content>
   <ion-header>
     <ion-toolbar class="ion-header">
-      <ion-title class="ion-header">Restablecer Contraseña</ion-title>
+      <ion-title class="ion-header" style="white-space: normal; text-align: center; font-size: 20px; line-height: 1.2;">
+        Restablecer Contraseña
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -14,16 +16,17 @@
   <!-- Formulario para nueva contraseña -->
   <ion-content class="ion-padding">
     <form (ngSubmit)="onResetPassword()">
-      <ion-item class="input-item">
-        <ion-label position="floating" class="input-label"
-          >Nueva contraseña</ion-label
-        >
-        <ion-input
-          type="password"
-          [(ngModel)]="newPassword"
-          name="newPassword"
-          required
-        ></ion-input>
+      <ion-item class="input-item" lines="none">
+        <div style="width: 100%;">
+          <label class="input-label">Nueva contraseña</label>
+          <ion-input
+            type="password"
+            [(ngModel)]="newPassword"
+            name="newPassword"
+            required
+            class="custom-input"
+          ></ion-input>
+        </div>
       </ion-item>
       <ion-button
         expand="block"
@@ -31,8 +34,8 @@
         class="cambiar-button"
         fill="clear"
       >
-        Guardar nueva contraseña</ion-button
-      >
+        Guardar nueva contraseña
+      </ion-button>
     </form>
   </ion-content>
 </ion-content>
